Add DAO method to find a card by its name